# management

./: docker-compose.yml
client/: Dockerfile  package-lock.json  package.json
client/public/: index.html
client/src/: App.css  App.js
client/src/components/: Budget.js  CertificateAndReceipt.js  ServiceForm.js  ServiceList.js  teste.html
pdf-generator/: Dockerfile  pom.xml
pdf-generator/src/main/java/com/example/demo/adapter/controller/: PdfController.java
pdf-generator/src/main/java/com/example/demo/adapter/util/: HtmlToPdfConverter.java
pdf-generator/src/main/java/com/example/demo/application/dto/: DataDTO.java  ItemDTO.java  PdfRequestDTO.java
pdf-generator/src/main/java/com/example/demo/infrastructure/service/: PdfService.java
pdf-generator/src/main/resources/: application.properties
pdf-generator/src/main/resources/templates/: budget.html  certificate_guarantee.html  receipt.html
server/: Dockerfile  app.py  config.py  models.py  pyproject.toml
server/utils/: export_pdf.py
